refactor: 네이밍 개선 & 연월 입력 방식 개선